--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
             top:0px;
 　          left:0px;
         }
-        nav{
-            
-            background-color: bisque;
+        header nav{
+            padding: 10px;
+            background-color: rgb(35, 47, 119);
             width:400px;
+            height: 100px;
+            color:#fff;
         }
+        nav .down-text{
+            display: flex;
+        }
+        
     </style>
 </head>
 
@@ -33,12 +39,23 @@
             <a class="navbar-brand" href="index.html"><img src="images/LOGO.png" title="回首頁"></a>
         </div>
         <nav>
-
+            <div class=top-text>
+                贏家會員：<span style="color:rgb(250, 204, 79)">test002</span>
+                主帳戶：<span style="color:rgb(182, 20, 8)">6,986.00</span>
+            </div>
+            <hr>
+            <div class=down-text>
+                <div class=text>平台轉帳 會員中心</div>
+                <div class=img style="color:rgb(99, 235, 245)"><img src="images/reflashiicon.png">刷新</div>
+            </div>
         </nav>
     </header>
-    <div>
-
-
+    <div class=content>
+        <div>
+            <div>
+                <div><img src="images/game_1.png"></div> <div>老虎機</div>
+            </div>
+        </div>
     </div>
 </body>
 
