--- a/index.html
+++ b/index.html
@@ -8,52 +8,113 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title></title>
-    <style>
-        header{            
-            position: absolute; 
-            display: flex;
-        }
-        .logo{
-            position: fixed;
-            top:0px;
-　          left:0px;
-        }
-        header nav{
-            padding: 10px;
-            background-color: rgb(35, 47, 119);
-            width:400px;
-            height: 100px;
-            color:#fff;
-        }
-        nav .down-text{
-            display: flex;
-        }
-        
-    </style>
 </head>
 
 <body>
     <header>
-        <img src="images/head_bg.png" >
+        <div class="header">
         <div class="logo" id="logo">
-            <a class="navbar-brand" href="index.html"><img src="images/LOGO.png" title="回首頁"></a>
+            <a href="index.html"><img src="images/LOGO.png" title="回首頁"></a>
         </div>
-        <nav>
-            <div class=top-text>
+        <div class="member">
+            <div class=member_top>
                 贏家會員：<span style="color:rgb(250, 204, 79)">test002</span>
                 主帳戶：<span style="color:rgb(182, 20, 8)">6,986.00</span>
             </div>
             <hr>
-            <div class=down-text>
-                <div class=text>平台轉帳 會員中心</div>
-                <div class=img style="color:rgb(99, 235, 245)"><img src="images/reflashiicon.png">刷新</div>
+            <div class=member_down>
+                <a href="#" class=text>平台轉帳</a>
+                <a href="#" class=text>會員中心</a>
+                <a href="#" class=img ><img src="images/reflashiicon.png"> 刷新</a>
             </div>
-        </nav>
+        </div>
+    </div>
     </header>
     <div class=content>
-        <div>
-            <div>
-                <div><img src="images/game_1.png"></div> <div>老虎機</div>
+        <div class=game_item>
+                <button class=game_text >
+                    <img src="images/game_1.png">老虎機
+                </button>
+                <button class=game_text>
+                    <img src="images/game_2.png">桌面遊戲
+                </button>
+                <button class=game_text>
+                    <img src="images/game_3.png">撲克遊戲
+                </button>
+               
+        </div>
+        <div class=game>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
+            </div>
+            <div class=the_game>
+                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <div class=game_name>海神傳說</div>
+                <div class=game_btn>
+                    <button class=game_btn1>開始遊戲</button>
+                    <button class=game_btn2>規則</button>
+                </div>
             </div>
         </div>
     </div>
