--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 贏家會員：<span style="color:rgb(250, 204, 79)">test002</span>
                 主帳戶：<span style="color:rgb(182, 20, 8)">6,986.00</span>
             </div>
-            <hr>
+            <div class="line"></div>
             <div class=member_down>
                 <a href="#" class=text>平台轉帳</a>
                 <a href="#" class=text>會員中心</a>
