--- a/index.html
+++ b/index.html
@@ -11,45 +11,43 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
+    <div class="header">
         <div class="logo" id="logo">
             <a href="index.html"><img src="images/LOGO.png" title="回首頁"></a>
         </div>
-        <div class="member">
+        <div class="member_info">
             <div class=member_top>
-                贏家會員：<span style="color:rgb(250, 204, 79)">test002</span>
-                主帳戶：<span style="color:rgb(182, 20, 8)">6,986.00</span>
+                贏家會員：<span style="color:rgb(247, 207, 99); margin-right:10px">test002</span>
+                主帳戶：<span style="color:rgb(252, 87, 95); margin-right:25px">6,986.00</span>
             </div>
             <div class="line"></div>
             <div class=member_down>
-                <a href="#" class=text>平台轉帳</a>
-                <a href="#" class=text>會員中心</a>
-                <a href="#" class=img ><img src="images/reflashiicon.png"> 刷新</a>
+                <a href="#" class=trans>平台轉帳</a>
+                <a href="#" class=member>會員中心</a>
+                <a href="#" class=renew ><img src="images/reflashiicon.png"> 刷新</a>
             </div>
         </div>
     </div>
-    </header>
     <div class=content>
-        <div class=game_item>
-                <button class=game_text >
-                    <img src="images/game_1.png">老虎機
-                </button>
-                <button class=game_text>
-                    <img src="images/game_2.png">桌面遊戲
-                </button>
-                <button class=game_text>
-                    <img src="images/game_3.png">撲克遊戲
-                </button>
-               
+        <div class=game_menu>
+                <div class=game_text >
+                    <img src="images/game_1.png"> 老虎機
+                </div>
+                <div class=game_text>
+                    <img src="images/game_2.png"> 桌面遊戲
+                </div>
+                <div class=game_text>
+                    <img src="images/game_3.png"> 撲克遊戲
+                </div>
+                
         </div>
-        <div class=game>
+        <div class=game_item>
             <div class=the_game>
-                <div class=game_img><img src="images/ThunderZeus.png"></div>
+                <img src="images/ThunderZeus.png">
                 <div class=game_name>海神傳說</div>
                 <div class=game_btn>
-                    <button class=game_btn1>開始遊戲</button>
-                    <button class=game_btn2>規則</button>
+                    <input type="button" class=game_btn1 value="開始遊戲">
+                    <input type="button" class=game_btn2 value="規則">
                 </div>
             </div>
             <div class=the_game>
